# Komms

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  compose.yaml  deny.toml
.github/: release-body.md
.github/ISSUE_TEMPLATE/: bug.md  design-review.md
.github/workflows/: audit.yml  ci.yml  container-ci.yml  container.yml  hil-nightly.yml  release.yml
apps/android/: README.md  gradle.properties  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/core/: build.gradle.kts  gradle.lockfile
apps/android/gradle/: libs.versions.toml
apps/desktop/: README.md
apps/desktop/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  qr.rs  session.rs
apps/desktop/src-tauri/tests/: desktop_e2e.rs
apps/desktop/ui/: index.html  main.js  style.css
apps/ios/: .gitignore  README.md
apps/ios/KommsApp/: project.yml
apps/ios/KommsCore/: Package.swift
crates/kult-crypto/: Cargo.toml
crates/kult-crypto/fuzz/: Cargo.toml
crates/kult-crypto/fuzz/fuzz_targets/: attachment_chunk_open.rs  bundle_decode.rs  call_media_open.rs  device_prekey_decode.rs  envelope_decode.rs  handshake_decode.rs  mnemonic_decode.rs
crates/kult-crypto/src/: anonbox.rs  attachment.rs  call.rs  device.rs  error.rs  fingerprint.rs  group.rs  handshake.rs  identity.rs  kdf.rs  lib.rs  mnemonic.rs  prekeys.rs  ratchet.rs  sealed.rs  util.rs  wordlist.rs
crates/kult-crypto/tests/: anonbox.rs  kat.rs  mnemonic.rs  properties.proptest-regressions  properties.rs  session.rs
crates/kult-ffi/: Cargo.toml
crates/kult-ffi/src/: audio.rs  image_edit.rs  lib.rs  runtime.rs
crates/kult-ffi/tests/: ffi_e2e.rs
crates/kult-node/: Cargo.toml
crates/kult-node/src/: api.rs  attachment.rs  authority.rs  calls.rs  carrier.rs  contact_names.rs  devices.rs  edits.rs  error.rs  file_presentation.rs  folders.rs  groups.rs  icons.rs  incognito_keyboard.rs  labels.rs  lib.rs  pins.rs  polls.rs  screen_security.rs  text_formatting.rs  theme.rs  vault.rs
crates/kult-node/tests/: attachments_e2e.rs  backup_e2e.rs  bridge.rs  bridge_e2e.rs  call_media_e2e.rs  calls_e2e.rs  carrier_capabilities.rs  contact_rename_e2e.rs  ephemeral_e2e.rs  folders_e2e.rs  groups_e2e.rs  icons_e2e.rs  incognito_keyboard_e2e.rs  internet_e2e.rs  labels_e2e.rs  linked_devices_e2e.rs  mailbox_e2e.rs  mesh_policies.rs  message_edits_e2e.rs  node_e2e.rs  note_to_self.rs  pins_e2e.rs  scheduled_messages.rs  screen_security_e2e.rs  theme_e2e.rs
crates/kult-protocol/: Cargo.toml
crates/kult-protocol/fuzz/: Cargo.toml
crates/kult-protocol/fuzz/fuzz_targets/: attachment_bulk_decode.rs  attachment_manifest_decode.rs  attachment_ranges.rs  bundle_import.rs  call_control_decode.rs  capability_decode.rs  content_decode.rs  device_sync_bundle_decode.rs  edit_decode.rs  ephemeral_decode.rs  group_authority_decode.rs  mention_decode.rs  poll_decode.rs  protocol_envelope_decode.rs  reassembler_insert.rs
crates/kult-protocol/src/: attachment.rs  attachment_bulk.rs  bundle.rs  call.rs  capability.rs  content.rs  device_sync.rs  edit.rs  envelope.rs  ephemeral.rs  error.rs  fragmentation.rs  group.rs  group_authority.rs  lib.rs  mention.rs  padding.rs  poll.rs  receipt.rs  token.rs
crates/kult-protocol/tests/: protocol.rs
crates/kult-store/: Cargo.toml
crates/kult-store/examples/: sneakernet_demo.rs
crates/kult-store/src/: backup.rs  devices.rs  ephemeral.rs  lib.rs  local_metadata.rs  media.rs  note.rs  scheduled.rs
crates/kult-store/tests/: backup.rs  capabilities.rs  local_metadata.rs  m2_sneakernet.rs  media.rs  note.rs
crates/kult-transport/: Cargo.toml
crates/kult-transport/src/: airtime.rs  internet.rs  lib.rs  mailbox.rs  mdns.rs  mesh.rs  sneakernet.rs
crates/kult-transport/tests/: bridge.rs  call_streams.rs  call_transport_spike.rs  dht.rs  internet.rs  mailbox.rs  mdns.rs  meshtastic.rs  nat.rs  sneakernet.rs
crates/kultd/: Cargo.toml
crates/kultd/src/: daemon.rs  lib.rs  secret.rs  wire.rs
crates/kultd/tests/: bridge_e2e.rs  hil.rs  mesh_e2e.rs  rpc_e2e.rs
deploy/: kultd-init-passphrase.sh
docs/: 00-start-here.md  01-why.md  02-threat-model.md  03-architecture.md  04-cryptography.md  05-transports.md  06-identity-trust.md  07-storage.md  08-roadmap.md  09-implementation-guide.md  10-hil-bench.md  11-feature-scope.md  12-feature-delivery-plan.md  13-screen-security.md  14-incognito-keyboard.md  15-contact-petnames.md  16-safe-text-formatting.md  17-safe-file-presentation.md  18-message-editing.md  19-ephemeral-messages.md  20-group-polls.md  21-group-roles.md  22-linked-devices.md  23-live-audio-calls.md  24-local-release-gate.md  25-release-runbook.md  26-self-hosting.md  27-alpha-testing.md  28-brand-system.md
docs/adr/: 0001-rust-core.md  0002-xchacha20poly1305.md  0003-double-ratchet-pqxdh.md  0004-libp2p.md  0005-meshtastic-first.md  0006-agplv3.md  0007-recipient-scoped-delivery-tokens.md  0008-in-tree-mdns.md  0009-destination-blind-bridging.md  0009-token-blind-bridging.md  0010-ffi-embedded-runtime.md  0011-mnemonic-sealed-backup.md  0012-sender-key-groups.md  0013-real-time-calls.md  0014-versioned-message-content.md  0015-encrypted-attachment-pipeline.md  0016-group-mention-content.md  0017-optional-hybrid-modes.md  0018-pairwise-rendezvous.md  0019-native-wake-gateway.md  0020-authenticated-message-edits.md  0021-ephemeral-retention.md  0022-convergent-group-polls.md  0023-group-roles-and-owner-authority.md  0024-account-authorized-linked-devices.md  README.md  template.md
fixtures/: b10-folder-parity.json  b11-pin-parity.json  b12-theme-parity.json  b13-custom-icon-parity.json  b14-screen-security-parity.json  b15-incognito-keyboard-parity.json  b18-label-parity.json  b5-contact-rename-parity.json  b9-text-formatting-parity.json  c1-file-presentation-parity.json  c3-message-edit-parity.json  c4-ephemeral-parity.json
scripts/: check-release-version.py  local-release-matrix.sh
(+128 files in other folders)
