[workspace]
resolver = "2"
members = [
    "crates/kult-crypto",
    "crates/kult-protocol",
    "crates/kult-transport",
    "crates/kult-store",
    "crates/kult-node",
    "crates/kult-ffi",
]
exclude = ["crates/kult-crypto/fuzz", "crates/kult-protocol/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
# 1.83 required by libp2p ≥ 0.55 (older libp2p pins the unmaintained ring 0.16).
rust-version = "1.83"
license = "AGPL-3.0-only"
repository = "https://github.com/AndriGitDev/KommsKult"

# Crypto tests are unusably slow without optimization (curve/KEM arithmetic).
[profile.test]
opt-level = 2

[profile.release]
lto = "thin"
