[workspace]
resolver = "2"
members = [
    "crates/kult-crypto",
    "crates/kult-protocol",
    "crates/kult-transport",
    "crates/kult-store",
    "crates/kult-node",
    "crates/kult-ffi",
    "crates/kultd",
]
exclude = ["crates/kult-crypto/fuzz", "crates/kult-protocol/fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
# 1.85 required by the meshtastic client crate (M4 mesh carrier); libp2p ≥ 0.55
# needs 1.83 (older libp2p pins the unmaintained ring 0.16).
rust-version = "1.85"
license = "AGPL-3.0-only"
repository = "https://github.com/AndriGitDev/Komms"

# Crypto tests are unusably slow without optimization (curve/KEM arithmetic).
[profile.test]
opt-level = 2

[profile.release]
lto = "thin"
