[workspace]
resolver = "2"
members = [
    "crates/kult-crypto",
    "crates/kult-protocol",
    "crates/kult-transport",
    "crates/kult-store",
    "crates/kult-node",
    "crates/kult-ffi",
    "crates/kultd",
]
# The desktop app is its own workspace (apps/desktop/src-tauri): the Tauri
# dependency tree stays out of the core lockfile and cargo-deny surface.
exclude = [
    "crates/kult-crypto/fuzz",
    "crates/kult-protocol/fuzz",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
# 1.88 required by the locked time-macros; the meshtastic client crate (M4
# mesh carrier) needs 1.85, libp2p ≥ 0.55 needs 1.83 (older libp2p pins the
# unmaintained ring 0.16). CI's msrv job verifies this floor stays honest.
rust-version = "1.88"
license = "AGPL-3.0-only"
repository = "https://github.com/AndriGitDev/Komms"

# Crypto tests are unusably slow without optimization (curve/KEM arithmetic).
[profile.test]
opt-level = 2

[profile.release]
lto = "thin"
