[package]
name = "kult-transport"
description = "KommsKult transport layer: the Transport trait every carrier implements, and the sneakernet (spool-directory) transport. Spec: docs/05-transports.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kult-protocol = { version = "0.1.0", path = "../kult-protocol" }
async-trait = "0.1"
futures = "0.3"
# NOTE: no "mdns" feature — libp2p-mdns still pins hickory-proto 0.25
# (RUSTSEC-2026-0118/0119, unpatched on that line) and this workspace ships
# zero ignored vulnerabilities. LAN auto-discovery is instead the small
# in-tree responder in src/mdns.rs (ADR-0008), speaking the same libp2p
# mDNS discovery profile.
libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "request-response",
    "cbor",
    "kad",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "macros",
    "ed25519",
] }
serde = { version = "1", features = ["derive"] }
# socket2 for the mDNS socket only: port 5353 must be shared (SO_REUSEADDR
# and SO_REUSEPORT) and multicast-joined — tokio's plain bind can do neither.
socket2 = "0.6"
tokio = { version = "1", features = ["fs", "net", "sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "time"] }
tempfile = "3"
