[package]
name = "kult-transport"
description = "Komms transport layer: the Transport trait every carrier implements, and the sneakernet (spool-directory) transport. Spec: docs/05-transports.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
# The Meshtastic LoRa carrier (M4). Off by default: it pulls the official
# meshtastic client crate (generated protobufs + stream plumbing, and via it
# tokio-serial), which consumers that never bridge a radio should not build.
meshtastic = ["dep:meshtastic"]

[dependencies]
kult-protocol = { version = "0.1.0", path = "../kult-protocol" }
async-trait = "0.1"
futures = "0.3"
# The official Meshtastic Rust client: the published protobuf definitions via
# a generated client, per docs/09-implementation-guide.md §3.3 ("do not
# hand-roll the serial framing").
meshtastic = { version = "0.1.9", optional = true }
# NOTE: no "mdns" feature — libp2p-mdns still pins hickory-proto 0.25
# (RUSTSEC-2026-0118/0119, unpatched on that line) and this workspace ships
# zero ignored vulnerabilities. LAN auto-discovery is instead the small
# in-tree responder in src/mdns.rs (ADR-0008), speaking the same libp2p
# mDNS discovery profile.
libp2p = { version = "0.56", features = [
    "tokio",
    "quic",
    "tcp",
    "noise",
    "yamux",
    "request-response",
    "cbor",
    "kad",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "macros",
    "ed25519",
] }
# Generic negotiated substreams for the direct-QUIC-only call media protocol.
# Pinned to the alpha measured and accepted in ADR-0013; the production
# wrapper below adds path gating because this crate otherwise chooses an
# arbitrary live connection to the peer.
libp2p-stream = "0.4.0-alpha"
serde = { version = "1", features = ["derive"] }
# socket2 for the mDNS socket only: port 5353 must be shared (SO_REUSEADDR
# and SO_REUSEPORT) and multicast-joined — tokio's plain bind can do neither.
socket2 = "0.6"
tokio = { version = "1", features = ["fs", "io-util", "net", "sync", "rt", "time", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "macros", "time"] }
tempfile = "3"
# For the M4 acceptance pin: a real ratcheted 192-bucket message must fit in
# ≤ 2 LoRa frames (docs/08-roadmap.md M4).
kult-crypto = { version = "0.1.0", path = "../kult-crypto" }
rand = "0.8"
