[package]
name = "kultd"
description = "KommsKult headless daemon: runs a node over the internet transport and exposes the command/event API as local RPC on a Unix socket. Spec: docs/03-architecture.md (application layer A3)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kultd"
path = "src/bin/kultd.rs"

[[bin]]
name = "kult"
path = "src/bin/kult.rs"

[dependencies]
kult-crypto = { version = "0.1.0", path = "../kult-crypto" }
kult-node = { version = "0.1.0", path = "../kult-node" }
kult-store = { version = "0.1.0", path = "../kult-store" }
# The daemon always ships the Meshtastic carrier: attaching a ~30€ radio to
# the box the daemon runs on is exactly the off-grid deployment M4 targets.
kult-transport = { version = "0.1.0", path = "../kult-transport", features = ["meshtastic"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
    "time",
    "io-util",
    "signal",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "test-util"] }
