[package]
name = "kult-crypto-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "AGPL-3.0-only"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kult-crypto = { path = ".." }

[[bin]]
name = "envelope_decode"
path = "fuzz_targets/envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "handshake_decode"
path = "fuzz_targets/handshake_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bundle_decode"
path = "fuzz_targets/bundle_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mnemonic_decode"
path = "fuzz_targets/mnemonic_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attachment_chunk_open"
path = "fuzz_targets/attachment_chunk_open.rs"
test = false
doc = false
bench = false

[[bin]]
name = "device_prekey_decode"
path = "fuzz_targets/device_prekey_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "call_media_open"
path = "fuzz_targets/call_media_open.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
