[package]
name = "kult-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "AGPL-3.0-only"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kult-protocol = { path = ".." }

[[bin]]
name = "protocol_envelope_decode"
path = "fuzz_targets/protocol_envelope_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bundle_import"
path = "fuzz_targets/bundle_import.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reassembler_insert"
path = "fuzz_targets/reassembler_insert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "content_decode"
path = "fuzz_targets/content_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "capability_decode"
path = "fuzz_targets/capability_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attachment_manifest_decode"
path = "fuzz_targets/attachment_manifest_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attachment_bulk_decode"
path = "fuzz_targets/attachment_bulk_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "attachment_ranges"
path = "fuzz_targets/attachment_ranges.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mention_decode"
path = "fuzz_targets/mention_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "edit_decode"
path = "fuzz_targets/edit_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "ephemeral_decode"
path = "fuzz_targets/ephemeral_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "poll_decode"
path = "fuzz_targets/poll_decode.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
